--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <title>Phaser - ES6 - Webpack</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
     initial-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <style>
         html,
