--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="http://slides.com/marynaleanovich/pigeon-post-eng#/"
+                   target="_blank">
                     <img src="assets/img/slides.png">
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://leuvarden.github.io/qwerty-landing/#home"
+                target="_blank">
                 <img src="assets/img/landing.png">
                 </a>
             </li>
